# medintel-ai

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.agents/: AGENTS.md
.ai/: BOOTSTRAP.md  Home.md  README.md  _CLAUDE.md  index.md  log.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03bb608557d6_initial_schema.py  30d783a96ae4_audit_logs_table.py  7a5287c24302_dataset_versioning_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  datasets.py  health.py  users.py
backend/app/core/: audit.py  config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  citation.py  conversation.py  dataset.py  document.py  embedding.py  message.py  user.py
backend/app/repositories/: __init__.py  audit.py  base.py  dataset.py  user.py
backend/app/schemas/: __init__.py  auth.py  dataset.py
backend/app/services/: __init__.py  auth.py  cleaning.py  dataset.py  validation.py
backend/app/storage/: object_store.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_cleaning.py  test_datasets.py  test_health.py  test_models.py  test_object_store.py  test_validation.py
docs/: 00_PROJECT_SCOPE.md  00_VISION_ML_PLATFORM.md  01A_Requirements_Matrix.md  01_PRD.md  02_TRD.md  03_APP_FLOW.md  04_PRODUCT_DESIGN.md  05_BACKEND_DESIGN.md  06_ML_MODELS.md  07_ML_OPS.md  (+5 more)
(+69 files in other folders)
